# backend-clone-Ifood

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
config/: settings.py  urls.py
ifood/: admin.py  apps.py  models.py  serializers.py  views.py
ifood/migrations/: 0001_initial.py  0002_offer_delivery.py  0003_restaurant_star.py
